--- a/Module1/B7_HuongDoiTuong_1/BaiTap/Temperature.html
+++ b/Module1/B7_HuongDoiTuong_1/BaiTap/Temperature.html
@@ -23,7 +23,7 @@
         let temperature = new Temperature(x);
         let doiCF = temperature.cSangF();
         let doiCK = temperature.cSangK();
-        document.getElementById('result').innerHTML = 'Đổi Sang K là: ' + doiCK + '<br>' + 'Đổi Sang F là: ' + doiCF
+        document.getElementById('result').innerHTML = 'Đổi Sang K là: ' + doiCK + '<br>' + 'Đổi Sang F là: ' + doiCF;
     }
 
 </script>
