--- a/Module1/B8_HuongDoiTuong_2/Game_Caro/Caro.html
+++ b/Module1/B8_HuongDoiTuong_2/Game_Caro/Caro.html
@@ -38,25 +38,41 @@
         isXPlayer = !isXPlayer;
         vBtnCurrent_Y_minus_1 = getValueButton(x, y - 1);
         vBtnCurrent_Y_minus_2 = getValueButton(x, y - 2);
+        vBtnCurrent_Y_minus_3 = getValueButton(x, y - 3);
+        vBtnCurrent_Y_minus_4 = getValueButton(x, y - 4);
         vBtnCurrent_Y_plus_1 = getValueButton(x, y + 1);
         vBtnCurrent_Y_plus_2 = getValueButton(x, y + 2);
+        vBtnCurrent_Y_plus_3 = getValueButton(x, y + 3);
+        vBtnCurrent_Y_plus_4 = getValueButton(x, y + 4);
         vBtnCurrent_X_minus_1 = getValueButton(x - 1, y);
         vBtnCurrent_X_minus_2 = getValueButton(x - 2, y);
+        vBtnCurrent_X_minus_3 = getValueButton(x - 3, y);
+        vBtnCurrent_X_minus_4 = getValueButton(x - 4, y);
         vBtnCurrent_X_plus_1 = getValueButton(x + 1, y);
         vBtnCurrent_X_plus_2 = getValueButton(x + 2, y);
+        vBtnCurrent_X_plus_3 = getValueButton(x + 3, y);
+        vBtnCurrent_X_plus_4 = getValueButton(x + 4, y);
         vBtnCurrent_X_minus_1_Y_minus_1 = getValueButton(x - 1, y - 1);
         vBtnCurrent_X_minus_2_Y_minus_2 = getValueButton(x - 2, y - 2);
+        vBtnCurrent_X_minus_3_Y_minus_3 = getValueButton(x - 3, y - 3);
+        vBtnCurrent_X_minus_4_Y_minus_4 = getValueButton(x - 4, y - 4);
         vBtnCurrent_X_plus_1_Y_plus_1 = getValueButton(x + 1, y + 1);
         vBtnCurrent_X_plus_2_Y_plus_2 = getValueButton(x + 2, y + 2);
+        vBtnCurrent_X_plus_3_Y_plus_3 = getValueButton(x + 3, y + 3);
+        vBtnCurrent_X_plus_4_Y_plus_4 = getValueButton(x + 4, y + 4);
         vBtnCurrent_X_minus_1_Y_plus_1 = getValueButton(x - 1, y + 1);
         vBtnCurrent_X_minus_2_Y_plus_2 = getValueButton(x - 2, y + 2);
+        vBtnCurrent_X_minus_3_Y_plus_3 = getValueButton(x - 3, y + 3);
+        vBtnCurrent_X_minus_4_Y_plus_4 = getValueButton(x - 4, y + 4);
         vBtnCurrent_X_plus_1_Y_minus_1 = getValueButton(x + 1, y - 1);
         vBtnCurrent_X_plus_2_Y_minus_2 = getValueButton(x + 2, y - 2);
-        let slack_left_top = vBtnCurrent.value == vBtnCurrent_X_minus_1_Y_minus_1 && vBtnCurrent.value == vBtnCurrent_X_minus_2_Y_minus_2;
-        let slack_right_bottom = vBtnCurrent.value == vBtnCurrent_X_plus_1_Y_plus_1 && vBtnCurrent.value == vBtnCurrent_X_plus_2_Y_plus_2;
-        let slack_left_bottom = vBtnCurrent.value == vBtnCurrent_X_minus_1_Y_plus_1 && vBtnCurrent.value == vBtnCurrent_X_minus_2_Y_plus_2;
-        let slack_right_top = vBtnCurrent.value == vBtnCurrent_X_plus_1_Y_minus_1 && vBtnCurrent.value == vBtnCurrent_X_plus_2_Y_minus_2;
-        let slack_middle_1 = vBtnCurrent.value == vBtnCurrent_X_minus_1_Y_minus_1 && vBtnCurrent.value == vBtnCurrent_X_plus_1_Y_plus_1;
+        vBtnCurrent_X_plus_3_Y_minus_3 = getValueButton(x + 3, y - 3);
+        vBtnCurrent_X_plus_4_Y_minus_4 = getValueButton(x + 4, y - 4);
+        let slack_left_top = vBtnCurrent.value == vBtnCurrent_X_minus_1_Y_minus_1 && vBtnCurrent.value == vBtnCurrent_X_minus_2_Y_minus_2 && vBtnCurrent.value == vBtnCurrent_Y_minus_3 && vBtnCurrent.value == vBtnCurrent_Y_minus_4;
+        let slack_right_bottom = vBtnCurrent.value == vBtnCurrent_X_plus_1_Y_plus_1 && vBtnCurrent.value == vBtnCurrent_X_plus_2_Y_plus_2 && vBtnCurrent.value == vBtnCurrent_X_plus_3_Y_plus_3 && vBtnCurrent.value == vBtnCurrent_X_plus_4_Y_plus_4 ;
+        let slack_left_bottom = vBtnCurrent.value == vBtnCurrent_X_minus_1_Y_plus_1 && vBtnCurrent.value == vBtnCurrent_X_minus_2_Y_plus_2 && vBtnCurrent.value == vBtnCurrent_X_minus_3_Y_plus_3 && vBtnCurrent.value == vBtnCurrent_X_minus_4_Y_plus_4 ;
+        let slack_right_top = vBtnCurrent.value == vBtnCurrent_X_plus_1_Y_minus_1 && vBtnCurrent.value == vBtnCurrent_X_plus_2_Y_minus_2 && vBtnCurrent.value == vBtnCurrent_X_plus_3_Y_minus_3 && vBtnCurrent.value == vBtnCurrent_X_plus_4_Y_minus_4;
+        let slack_middle_1 = vBtnCurrent.value == vBtnCurrent_X_minus_1_Y_minus_1 && vBtnCurrent.value == vBtnCurrent_X_plus_1_Y_plus_1 ;
         let slack_middel_2 = vBtnCurrent.value == vBtnCurrent_X_minus_1_Y_plus_1 && vBtnCurrent.value == vBtnCurrent_X_plus_1_Y_minus_1;
         let col_top = vBtnCurrent.value == vBtnCurrent_X_plus_1 && vBtnCurrent.value == vBtnCurrent_X_plus_2;
         let col_bottom = vBtnCurrent.value == vBtnCurrent_X_minus_1 && vBtnCurrent.value == vBtnCurrent_X_minus_2;
