--- a/Module1/B8_HuongDoiTuong_2/BaiTap/Switch_Lamp/Switch_Lamp.html
+++ b/Module1/B8_HuongDoiTuong_2/BaiTap/Switch_Lamp/Switch_Lamp.html
@@ -25,8 +25,28 @@
         }
     };
     class Lamp {
+        constructor(switchButton) {
+        }
+        onLight = function () {
+            if (switchButton1.getStatus() === true) {
+                document.getElementById("lamp").src = "https://www.w3schools.com/html/pic_bulbon.gif";
+                document.getElementById("result").innerHTML = "Bóng đèn đang bật";
 
-    }
+            }else {
+                document.getElementById("lamp").src = "https://www.w3schools.com/html/pic_bulboff.gif";
+                document.getElementById("result").innerHTML = "Bóng đèn đang tắt";
+            }
+
+        }
+
+    };
+
+    let switchButton1 = new SwitchButton(false);
+    let lamp = new Lamp(switchButton1);
+    function turnOn_turnOff_lamp(){
+        switchButton1.turnOnOff();
+        lamp.onLight();
+    };
 </script>
 </body>
 </html>
