--- a/Module1/B9_XuLyChuoi/BaiTap/LuyenTap/NgaySinh/NgaySinh.html
+++ b/Module1/B9_XuLyChuoi/BaiTap/LuyenTap/NgaySinh/NgaySinh.html
@@ -13,7 +13,7 @@
         let m = parseInt(comp[1]);
         let y = parseInt(comp[2]);
         let date = new Date(y,m-1,d);
-        if (date.getFullYear() == y && date.getMonth() + 1 == m && date.getDate() == d) {
+        if (date.getFullYear() === y && date.getMonth() + 1 === m && date.getDate() === d) {
             return true
         }
         return false
