--- a/Module1/B10_ThuatToan/BaiTap/SapXep/SapXep.html
+++ b/Module1/B10_ThuatToan/BaiTap/SapXep/SapXep.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <script>
+    alert(2+4+'1');
     let arr = [2,1,5,1,9];
     for (let i = 0; i < arr.length; i++) {
         for (let j=i+1 ; j<arr.length;j++) {
